Начало разработки шаблонов веб-страниц

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<p class="text-justify"><h2>Добро пожаловать в систему автоматизированной выдачи заданий</h2></p>
+<h5>
+    Пожалуйста, <a asp-area="" asp-controller="Home" asp-action="Login">войдите</a> в систему
+</h5>   
