--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -1,6 +1,6 @@
 ﻿@model TasksDatabase.ViewModels.LoginViewModel
 @{
-    ViewData["Title"] = "Login";
+        ViewData["Title"] = "Войти";
 }
 <h2>Войти</h2>
 <form method="post" asp-controller="Account" asp-action="Login"
@@ -8,7 +8,7 @@
     <div asp-validation-summary="ModelOnly"></div>
     <div class="form-group">
         <label asp-for="Name"></label>
-        <input asp-for="Name" class="form-control" aria-describedby="emailHelp" placeholder="Введите логин">
+        <input asp-for="Name" class="form-control" placeholder="Введите логин">
         <span asp-validation-for="Name"></span>
     </div>
     <div class="form-group">
