--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,29 +4,87 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - TasksDatabase</title>
+    <title>@ViewData["Title"] - Задания</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light px-lg-5">
-            <a class="navbar-brand" href="#">ФИНО</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <nav class="navbar navbar-light navbar-expand-md bg-faded justify-content-center">
+            <a href="/" class="navbar-brand d-flex w-50 mr-auto">ФИНО</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar3">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
-
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Домой</a>
+            <div class="navbar-collapse collapse w-100" id="collapsingNavbar3">
+                @if (User.Identity.IsAuthenticated)
+                {
+                    @if (User.IsInRole("Admin"))
+                    {
+                <ul class="navbar-nav w-100 justify-content-center">
+                    <li class="nav-item ">
+                        <a class="nav-link" asp-controller="admin" asp-action="add">Добавить задание</a>
+                    </li>
+                    <li class="nav-item ">
+                        <a class="nav-link" asp-controller="admin" asp-action="approve">Утвердить</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Отчеты
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">Блоки</a>
+                            <a class="dropdown-item" href="#">Курсы</a>
+                            <a class="dropdown-item" href="#">Задания</a>
+                            <a class="dropdown-item" href="#">Задание</a>
+                            <a class="dropdown-item" href="#">Трекинги</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">Пользователи</a>
+                        </div>
+                    </li>
+                    <li class="nav-item ">
+                        <a class="nav-link" asp-controller="roles" asp-action="index">Привелегии</a>
                     </li>
                 </ul>
-                <div class="form-inline my-2 my-lg-0">
-                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Login">Войти</a>
-                </div>
+                    }
+                    else
+                    {
+                        <ul class="navbar-nav w-100 justify-content-center">
+                            <li class="nav-item ">
+                                <a class="nav-link" href="/index">Таблица заданий</a>
+                            </li>
+                            <li class="nav-item ">
+                                <a class="nav-link" href="//codeply.com">Диаграмма Ганта</a>
+                            </li>
+                        </ul>
+                    }
+
+
+
+
+                    <ul class="nav navbar-nav ml-auto w-100 justify-content-end">
+                        <li class="nav-item">
+                            <a class="nav-link">Пользователь: @User.Identity.Name</a>
+                        </li>
+                        @if (User.IsInRole("Admin"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link"><b>(Админ)</b></a>
+                            </li>
+                        }
+                    </ul>
+                    <form method="post" asp-controller="Account" asp-action="Logout">
+
+                        <button type="submit" class="btn btn-light">Выход</button>
+                    </form>
+                }
+                else
+                {
+                    <ul class="nav navbar-nav ml-auto w-100 justify-content-end">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Account" asp-action="Login">Войти</a>
+                        </li>
+                    </ul>
+                }
             </div>
         </nav>
     </header>
