--- a/Views/Users/Edit.cshtml
+++ b/Views/Users/Edit.cshtml
@@ -8,8 +8,8 @@
         <input type="hidden" asp-for="Id" />
     </div>
     <div class="form-group">
-        <label asp-for="Name" class="control-label">Email</label>
-        <input type="text" asp-for="Name" class="form-control" />
+        <label asp-for="UserName" class="control-label"></label>
+        <input type="text" asp-for="UserName" class="form-control" />
     </div>
     <div class="form-group">
         <label asp-for="IsAdmin" class="control-label">Год рождения</label>
