--- a/Views/Users/Index.cshtml
+++ b/Views/Users/Index.cshtml
@@ -1,25 +1,24 @@
-﻿@model IEnumerable<TasksDatabase.Models.User>
+﻿@model Microsoft.AspNetCore.Identity.UserManager<User>
 @{
     ViewBag.Title = "Список пользователей";
 }
 
-<a asp-action="Create">Добавить пользователя</a>
-
+<a asp-action="Create">Добавить пользователя</a> @*IEnumerable<TasksDatabase.Models.User>*@
 <table class="table">
-    <tr><th>Email</th><th>Год</th><th></th></tr>
-    @foreach (var user in Model)
-    {
-        <tr>
-            <td>@user.Name</td>
-            <td>@user.IsAdmin</td>
-            <td>
-                <form asp-action="Delete" asp-route-id="@user.Id" method="post">
-                    <a class="btn btn-sm btn-primary" asp-action="Edit" asp-route-id="@user.Id">Изменить</a>
-                    <button type="submit" class="btn btn-sm btn-danger">
-                        Удалить
-                    </button>
-                </form>
-            </td>
-        </tr>
-    }
-</table>
+        <tr><th>Имя</th><th>Группа</th><th></th></tr>
+        @foreach (var user in Model.Users.ToList())
+        {
+            <tr>
+                <td>@user.UserName</td>
+                <td>@user.</td>
+                <td>
+                    <form asp-action="Delete" asp-route-id="@user.Id" method="post">
+                        <a class="btn btn-sm btn-primary" asp-action="Edit" asp-route-id="@user.Id">Изменить</a>
+                        <button type="submit" class="btn btn-sm btn-danger">
+                            Удалить
+                        </button>
+                    </form>
+                </td>
+            </tr>
+        }
+    </table>
