--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
             <ul class="nav navbar-nav mr-auto">
                 <li>
                     <a asp-controller="home" asp-action="index" class="navbar-brand">ФИНО</a>
@@ -34,13 +34,8 @@
                                 Отчеты
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <a class="dropdown-item" href="#">Блоки</a>
-                                <a class="dropdown-item" href="#">Курсы</a>
-                                <a class="dropdown-item" href="#">Задания</a>
-                                <a class="dropdown-item" href="#">Задание</a>
-                                <a class="dropdown-item" href="#">Трекинги</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">Пользователи</a>
+                                <a class="dropdown-item" asp-controller="admin" asp-action="blockinfo">Блоки</a>
+                                <a class="dropdown-item" asp-controller="admin" asp-action="courseinfo">Курсы</a>
                             </div>
                         </li>
 
