--- a/Views/Users/Index.cshtml
+++ b/Views/Users/Index.cshtml
@@ -11,9 +11,10 @@
         <tr>
             <td>@user.UserName</td>
             <td>
+                <a class="btn btn-sm btn-info" asp-controller="admin" asp-action="UserInfo" asp-route-User="@user.Id">Информация</a>
+                <a class="btn btn-sm btn-primary" asp-action="Edit" asp-route-id="@user.Id">Изменить</a>
+                <a class="btn btn-sm btn-primary" asp-action="ChangePassword" asp-route-id="@user.Id">Сменить пароль</a>
                 <form asp-action="Delete" asp-route-id="@user.Id" method="post">
-                    <a class="btn btn-sm btn-primary" asp-action="Edit" asp-route-id="@user.Id">Изменить</a>
-                    <a class="btn btn-sm btn-primary" asp-action="ChangePassword" asp-route-id="@user.Id">Сменить пароль</a>
                     <button type="submit" class="btn btn-sm btn-danger">
                         Удалить
                     </button>
