Отчеты по пользователям

--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -21,6 +21,6 @@
         <label asp-for="RememberMe"></label>
     </div>
     <div>
-        <input type="submit" value="Войти" />
+        <input type="submit" class="btn btn-info" value="Войти" />
     </div>
 </form>
