--- a/Views/Admin/TaskInfo.cshtml
+++ b/Views/Admin/TaskInfo.cshtml
@@ -20,7 +20,7 @@
             <tr>
                 <td>@tracking.Status.Name</td>
                 <td>@tracking.User.UserName</td>
-                <td>@tracking.Time.ToString("dd.MM.yyyy (hh:mm)")</td>
+                <td>@tracking.Time.ToString("dd.MM.yyyy (HH:mm)")</td>
                 @if (tracking.Comment != "")
                 {
                     <td>@tracking.Comment</td>
