--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -36,6 +36,7 @@
                             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                 <a class="dropdown-item" asp-controller="admin" asp-action="blockinfo">Блоки</a>
                                 <a class="dropdown-item" asp-controller="admin" asp-action="courseinfo">Курсы</a>
+                                <a class="dropdown-item" asp-controller="admin" asp-action="userinfo">Пользователи</a>
                             </div>
                         </li>
 
