--- a/Views/Tasks/Table.cshtml
+++ b/Views/Tasks/Table.cshtml
@@ -129,7 +129,7 @@
                     <td>@tracking.Problem.Course.Name</td>
                     <td>@tracking.Problem.Name</td>
                     <td>@ProblemType</td>
-                    <td>@tracking.Time.ToString("dd.MM.yyyy (hh:mm)")</td>
+                    <td>@tracking.Time.ToString("dd.MM.yyyy (HH:mm)")</td>
                 </tr>
 
                 {
@@ -205,7 +205,7 @@
                     <td>@tracking.Problem.Name</td>
                     <td>@ProblemType</td>
                     <td>@(tracking.StartTime != null ? tracking.StartTime.Value.ToString("dd.MM.yyyy (HH:mm)") : "n/a")</td>
-                    <td>@tracking.Time.ToString("dd.MM.yyyy (hh:mm)")</td>
+                    <td>@tracking.Time.ToString("dd.MM.yyyy (HH:mm)")</td>
                 </tr>
             }
         }
