--- a/Views/Tasks/Diagram.cshtml
+++ b/Views/Tasks/Diagram.cshtml
@@ -1,5 +1,4 @@
-﻿@using TasksDatabase.ViewModels;
-@model DiagramViewModel;
+﻿@model TasksDatabase.ViewModels.DiagramViewModel;
 @{
     ViewData["Title"] = "Home Page";
 }
