--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-action="table" asp-controller="tasks">Утвердить</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-action="diagram" asp-controller="tasks">Диаграмма</a>
+                        </li>
 
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
